crates/ui/src/snapshots/cctop_ui__snapshot__new_tab_remote_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   LAST▲╭ New tab ───────────────────────────────────────────────────╮JECT    │
│●    now│   claude                                                   │ the ch…┃
│●     7m│   codex                   local only                       │        │
╰────────│   opencode                                                 │────────╯
╭ Info  P│ in procdb:~/proj  (c to change)                            │ Context╮
│Root /us│ codex can't run commands on a remote host yet              │        │
│    PID │ ↑/↓  c change folder  Esc cancel                           │        │
│   4101 ╰────────────────────────────────────────────────────────────╯        │
│   4188    2.4%     44.0M  node mcp-server.js                                 │
│   4290    0.3%      8.0M  bash -c npm test                                   │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
